# BF2VR

./: .gitignore  CMakeLists.txt  README.md
.github/: FUNDING.yml
.github/workflows/: prerelease-compiler.yml
scripts/: ghidra_dump_offsets.py  ghidra_find_func_strings.py  ghidra_rename_vtables.py
src/BF2VR/: ActionsService.cpp  ActionsService.h  BF2Service.cpp  BF2Service.h  D3DService.cpp  D3DService.h  Hook.h  Logging.cpp  Logging.h  OpenXRService.cpp  OpenXRService.h  SDK.h  main.cpp
src/BF2VR/Engine/: BF2Service.cpp  BF2Service.h  Classes.h  Offsets.h  Types.h
src/BF2VR/Rendering/: D3DService.cpp
src/BF2VR/Utils/: Logging.cpp
src/BF2VR/VR/: ActionsService.cpp  ActionsService.h  OpenXRService.cpp  OpenXRService.h
src/Loader/: Loader.rc  main.cpp
